EGL: remove the dlopen() hack

It only worked for non-ES OpenGL and if the libGL development files
were installed (otherwise "libGL.so" does not exist). So let Mesa fix
their bugs and stop caring about them:
https://bugs.freedesktop.org/show_bug.cgi?id=34476

In the mean time, you can use VLC and EGL with:

 # LD_PRELOAD=/usr/lib/libGL.so vlc